*Empty MediaWiki Message*

--- a/Портал:Сымыктыш%2FОйырымо_сӱрет%2FКызытсе_ойырымаш.mw
+++ b/Портал:Сымыктыш%2FОйырымо_сӱрет%2FКызытсе_ойырымаш.mw
@@ -1,1 +1,31 @@
-[[Файл:Olpe sphinx Louvre Cp10475.jpg|400px]]
+Ойырымо сӱрет кажне секундышто чокым вашталтеш.
+----
+[[Файл:Edouard Manet 011.jpg|250px|center]]
+<div align=center> ''[[Эдуард Мане]]'', «Цветы клематиса в хрустальной вазе» </div>
+----
+[[Файл:Hiroshige Pruneraie à Kameido.jpg|300px|center]]
+<div align=center> ''[[Хиросигэ]]'', «Сто знаменитых видов Эдо»,  <br />Лист № 30 «Сливовый сад в Камэйдо» </div>
+----
+[[Файл:100 views edo 056.jpg|300px|center]]
+<div align=center> ''Хиросигэ'', «Сто знаменитых видов Эдо»,  <br />Лист № № 56 «Ирисы в Хорикири» </div>
+----
+[[Файл:Albrecht Dürer 104.jpg|300px|center]]
+<div align=center> «Автопортрет», [[Альбрехт Дюрер]], 1500, [[Старая пинакотека]], [[Мюнхен]] </div>
+----
+[[Файл:LevitanSpringFlood.jpg|300px|center]]
+<div align=center> ''[[Исаак Ильич Левитан]]'', «Весна — большая вода» </div>
+----
+[[Файл:Casa Batllo.jpg|300px|center]]
+<div align=center> ''Дом Бальо'' </div>
+----
+[[Файл:Athena Herakles Staatliche Antikensammlungen 2301 A full.jpg|300px|center]]
+<div align=center> [[Амфора]]-билингва  <br />вазописца Андокида. <br /> [[Геракл]] и [[Афина]]. ок. [[520-е до н. э.|520 г. до н. э.]] [[Государственное античное собрание]]. [[Мюнхен]] </div>
+----
+[[Файл:Olpe sphinx Louvre Cp10475.jpg|300px|center]]
+<div align=center> Протокоринфская ольпа с изображением  <br />животных и [[сфинкс]]ов. Ок. 650—630 гг. до н. э. [[Лувр]] </div>
+----
+[[Файл:Peterthegreategg.JPG|300px|center]]
+<div align=center> ''[[Яйца Фаберже]]'', «Петр Великий» </div>
+----
+[[Файл:Vincent Willem van Gogh 128.jpg|320px|center]]
+<div align=center> «Подсолнухи», [[Ван Гог]], 1888 </div>
