--- a/Портал:Сымыктыш%2FОйырымо_сӱрет%2FКызытсе_ойырымаш.mw
+++ b/Портал:Сымыктыш%2FОйырымо_сӱрет%2FКызытсе_ойырымаш.mw
@@ -7,22 +7,22 @@
 <div align=center> ''[[Хиросигэ]]'', «Сто знаменитых видов Эдо»,  <br />Лист № 30 «Сливовый сад в Камэйдо» </div>
 ----
 [[Файл:100 views edo 056.jpg|300px|center]]
-<div align=center> ''Хиросигэ'', «Сто знаменитых видов Эдо»,  <br />Лист № № 56 «Ирисы в Хорикири» </div>
+<div align=center> ''[[Хиросигэ]]'', «Сто знаменитых видов Эдо»,  <br />Лист № № 56 «Ирисы в Хорикири» </div>
 ----
 [[Файл:Albrecht Dürer 104.jpg|300px|center]]
-<div align=center> «Автопортрет», [[Альбрехт Дюрер]], 1500, [[Старая пинакотека]], [[Мюнхен]] </div>
+<div align=center> «[[Автопортрет (картина, Дюрер, 1500)|Автопортрет]]», [[Альбрехт Дюрер]], 1500, [[Старая пинакотека]], [[Мюнхен]] </div>
 ----
 [[Файл:LevitanSpringFlood.jpg|300px|center]]
-<div align=center> ''[[Исаак Ильич Левитан]]'', «Весна — большая вода» </div>
+<div align=center> ''[[Исаак Ильич Левитан]]'', «[[Весна — большая вода]]» </div>
 ----
 [[Файл:Casa Batllo.jpg|300px|center]]
-<div align=center> ''Дом Бальо'' </div>
+<div align=center> ''[[Дом Бальо]]'' </div>
 ----
 [[Файл:Athena Herakles Staatliche Antikensammlungen 2301 A full.jpg|300px|center]]
-<div align=center> [[Амфора]]-билингва  <br />вазописца Андокида. <br /> [[Геракл]] и [[Афина]]. ок. [[520-е до н. э.|520 г. до н. э.]] [[Государственное античное собрание]]. [[Мюнхен]] </div>
+<div align=center> [[Амфора]]-[[билингва (вазопись)|билингва]]  <br />[[Андокид (вазописец)|вазописца Андокида]]. <br /> [[Геракл]] и [[Афина]]. ок. [[520-е до н. э.|520 г. до н. э.]] [[Государственное античное собрание]]. [[Мюнхен]] </div>
 ----
 [[Файл:Olpe sphinx Louvre Cp10475.jpg|300px|center]]
-<div align=center> Протокоринфская ольпа с изображением  <br />животных и [[сфинкс]]ов. Ок. 650—630 гг. до н. э. [[Лувр]] </div>
+<div align=center> Протокоринфская [[ольпа]] с изображением  <br />животных и [[сфинкс]]ов. Ок. 650—630 гг. до н. э. [[Лувр]] </div>
 ----
 [[Файл:Peterthegreategg.JPG|300px|center]]
 <div align=center> ''[[Яйца Фаберже]]'', «Петр Великий» </div>
