*Empty MediaWiki Message*

--- a/Кышкар:Портал:Сымыктыш%2FНавигаций.mw
+++ b/Кышкар:Портал:Сымыктыш%2FНавигаций.mw
@@ -8,5 +8,5 @@
 [[Портал:Спорт|Спорт]] &nbsp;&bull;
 [[Портал:Технологий|Технологий]] &nbsp;&bull;
 [[Портал:Шанче|Шанче]] &nbsp;&bull; 
-[[Портал:Сымыктыш|Сымыктыш]] &nbsp;&bull;
+[[Портал:Сымыктыш|Сымыктыш]]
 </div>
