*Empty MediaWiki Message*

--- a/Васинкин,_Аркадий_Афанасьевич.mw
+++ b/Васинкин,_Аркадий_Афанасьевич.mw
@@ -1,3 +1,4 @@
+{{Викификаций}}
 [[Файл:Arkady Vasinkin.jpg|thumb|250px|А. А. Васинкин - [[шанчызе]], "Поэтический мир В. Колумба" книган авторжо.]]
 '''Васинкин, Аркадий Афанасьевич''' ([[30 Сӱрем]] [[1950]] — [[17 Шорыкйол]] [[2008]]<ref>[http://gov.mari.ru/me/files/pg42-08/stat_03.htm "Кушеч тыгае порылык мемнан?" статья Аркадий Васинкин нерген официал Марий Эл Правительствийын серверышто.]</ref>) — [[марий]] сылнымут шымлызе, [[йылмышанче]] кандидатше, [[серызе]]. [[Люсенер]] [[ял]]ыште ([[Арбор]]), [[Марий Тӱрек кундем]]ыште туныктышо ешыште шочын. Ачаже ӱмыржӧ мучко шочмо школыштыжо пашам ыштен, йот йылмым пеш сайын пален, аваже самырыкше годым пеш тале комсомол пашаеҥ лийын, колхозышто бригадирлан коштын.
 
