--- a/Портал:Сымыктыш.mw
+++ b/Портал:Сымыктыш.mw
@@ -35,9 +35,9 @@ __NOTOC__ __NOEDITSECTION__
 <div align="right"><small>{{Editme|Портал:Сымыктыш/У статья-влак|text=Тӧрлаташ}}</small></div>
 |-
 | style="border: 2px solid #C0C0C0; border-top:none; background-color:#F9F9F9; border-left:none; border-right:none; border-bottom:none; padding:0.5em;" valign="top" |
-<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Проект-влак'''</div>
+<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Палыме еҥ-влак'''</div>
 ----
-{{Портал:Сымыктыш/Проект-влак}}
+{{Портал:Сымыктыш/Палыме еҥ-влак}}
 
 |}
 <!-- ######################### Fin columna derecha #########################-->
@@ -78,12 +78,8 @@ __NOTOC__ __NOEDITSECTION__
 </div>
 |}
 |}
-{{Портал:Сымыктыш/Таб}}
 
 [[Категорий:Портал:Сымыктыш| ]]
-
-{{Link FL|he}}
-
 
 [[ru:Портал:Искусство]]
 [[bg:Портал:Изкуство]]
