*Empty MediaWiki Message*

--- a/Портал:Сымыктыш.mw
+++ b/Портал:Сымыктыш.mw
@@ -45,7 +45,7 @@ __NOTOC__ __NOEDITSECTION__
 ----
 <div style="padding:0.0em 0.0em 0.0em 0.0em; background-color:transparent;">
 {{Портал:Сымыктыш/Ойырымо статья}}
-<div align="right"><small>[[Портал:Сымыктыш/Ойырымо статья/Архив|Архив]]&nbsp;&nbsp;{{Editme|Портал:Сымыктыш/Ойырымо статья|text=Тӧрлаташ}}</small></div>
+<div align="right"><small>[[Портал:Сымыктыш/Ойырымо статья/Архив|Архив]]&nbsp;&nbsp;{{Editme|Ямдылык:Портал:Сымыктыш/Ойырымо статья|text=Тӧрлаташ}}</small></div>
 </div>
 |-
 | style="vertical-align:top; width:70%;" |
@@ -53,7 +53,7 @@ __NOTOC__ __NOEDITSECTION__
 ----
 <div style="padding:0.0em 0.0em 0.0em 0.0em; background-color:transparent;">
 {{Портал:Сымыктыш/Ойырымо сӱрет}}
-<div align="right"><small>[[Портал:Сымыктыш/Ойырымо сӱрет/Кызытсе ойырымаш|Кызытсе ойырымаш]]&nbsp;&nbsp;[[Портал:Сымыктыш/Ойырымо сӱрет/Архив|Архив]]&nbsp;&nbsp;{{Editme|Портал:Сымыктыш/Ойырымо сӱрет|text=Тӧрлаташ}}</small></div>
+<div align="right"><small>[[Портал:Сымыктыш/Ойырымо сӱрет/Кызытсе ойырымаш|Кызытсе ойырымаш]]&nbsp;&nbsp;[[Портал:Сымыктыш/Ойырымо сӱрет/Архив|Архив]]&nbsp;&nbsp;{{Editme|Ямдылык:Портал:Сымыктыш/Ойырымо сӱрет|text=Тӧрлаташ}}</small></div>
 </div>
 |-
 | style="vertical-align:top; width:70%; border: 2px solid #C0C0C0; border-top:none; background-color:#F9F9F9; border-left:none; border-right:none; border-bottom:none; padding:0.5em;" valign="top" |
@@ -61,7 +61,7 @@ __NOTOC__ __NOEDITSECTION__
 ----
 <div style="padding:0.0em 0.0em 0.0em 0.0em; background-color:transparent;">
 {{Портал:Сымыктыш/Ойырымо айдеме}}
-<div align="right"><small>[[Портал:Сымыктыш/Ойырымо айдеме/Архив|Архив]]&nbsp;&nbsp;{{Editme|Портал:Сымыктыш/Ойырымо айдеме|text=Тӧрлаташ}}</small></div>
+<div align="right"><small>[[Портал:Сымыктыш/Ойырымо айдеме/Архив|Архив]]&nbsp;&nbsp;{{Editme|Ямдылык:Портал:Сымыктыш/Ойырымо айдеме|text=Тӧрлаташ}}</small></div>
 </div>
 |-
 | style="vertical-align:top; width:70%;" |
@@ -69,7 +69,7 @@ __NOTOC__ __NOEDITSECTION__
 ----
 <div style="padding:0.0em 0.0em 0.0em 0.0em; background-color:transparent;">
 {{Портал:Сымыктыш/Кузе мый полшен кертам}}
-<div align="right"><small>{{Editme|Портал:Сымыктыш/Кузе мый полшен кертам|text=Тӧрлаташ}}</small></div>
+<div align="right"><small>{{Editme|Ямдылык:Портал:Сымыктыш/Кузе мый полшен кертам|text=Тӧрлаташ}}</small></div>
 </div>
 |}
 |}
