*Empty MediaWiki Message*

--- a/Портал:Сымыктыш.mw
+++ b/Портал:Сымыктыш.mw
@@ -21,7 +21,7 @@ __NOTOC__ __NOEDITSECTION__
 <div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Ӱлылпортал-влак'''</div>
 ----
 {{Портал:Сымыктыш/Ӱлылпортал-влак}}
-<div align="right"><small>{{Editme|Портал:Сымыктыш/Йоча портал-влак|text=Тӧрлаташ}}</small></div>
+<div align="right"><small>{{Editme|Ямдылык:Портал:Сымыктыш/Ӱлылпортал-влак|text=Тӧрлаташ}}</small></div>
 |-
 | style="border: 2px solid #C0C0C0;border-top:none; background-color:#F9F9F9;border-left:none;border-right:none; padding:0.5em;" valign="top" |
 <div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Категорий-влак'''</div>
@@ -32,7 +32,7 @@ __NOTOC__ __NOEDITSECTION__
 <div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''У статья-влак'''</div>
 ----
 {{Портал:Сымыктыш/У статья-влак}}
-<div align="right"><small>{{Editme|Портал:Сымыктыш/У статья-влак|text=Тӧрлаташ}}</small></div>
+<div align="right"><small>{{Editme|Ямдылык:Портал:Сымыктыш/У статья-влак|text=Тӧрлаташ}}</small></div>
 
 |}
 <!-- ######################### Fin columna derecha #########################-->
