*Empty MediaWiki Message*

--- a/Кышкар:Портал:Сымыктыш%2FОйырымо_статья.mw
+++ b/Кышкар:Портал:Сымыктыш%2FОйырымо_статья.mw
@@ -5,3 +5,5 @@
 
 "Акпатыр" оперын премьерын эртыме кечыже ([[5 Вӱдшор]] [[1963]]) марий оперын шочмо кечыжлан шотлалтеш. «Акпатыр» опера [[Чавайн]]ын тыгаяк лӱман произведенийже негызеш Эрик Сапаев семлызе возен. Либреттом Геннадий Матюковский, Йыван Осмин, Михаил Якимов ямдыленыт. Пугачёв жап годсо сар кредалмаш пагытым ончыкта, кузе марий-влак руш кугыжа ваштареш шке эрык верч кучедалыныт.
 ''([[Опера|умбакыже…]])''
+
+[[Категорий:Портал:Сымыктыш]]
