*Empty MediaWiki Message*

--- a/Кышкар:Портал:Сымыктыш%2FОйырымо_айдеме.mw
+++ b/Кышкар:Портал:Сымыктыш%2FОйырымо_айдеме.mw
@@ -3,3 +3,4 @@
 Икымше сем шинчымашым [[Палантай лӱмеш тӱвыра да сымыктыш колледж|Культпросветшколышто]] налын. [[Скрипка]] дене шокташ тунемын. 1953 гыч [[Озаҥысе кугыжаныш консерваторий]]ыште композицийлан тунемын. Консерваторий деч вара Йошкар-Олаште сем училищыште туныктен. "Акпатыр" лӱман икымше марий [[Опера|оперым]] возен.
 
 ''([[Сапаев, Эрик Никитич|умбакыже…]])''
+[[Категорий:Портал:Сымыктыш]]
