--- a/Кышкар:Портал:Сымыктыш%2FКузе_мый_полшен_кертам.mw
+++ b/Кышкар:Портал:Сымыктыш%2FКузе_мый_полшен_кертам.mw
@@ -3,3 +3,5 @@
 '''Саемдашлан:''' [[Артамонов, Юрий Михайлович]] • [[Петров, Юрий Данилович]] • [[И.С.Палантай лӱмеш тӱвыра да сымыктыш колледж]] • [[Вольфганг Амадей Моцарт]] • [[Петухов, Василий Михайлович]] • [[Элвис Пресли]] • [[Зайниев, Гельсий Зайниевич]] • [[М.Шкетан лӱмеш Марий Кугыжаныш драме театр]] • [[Захаров, Вениамин Александрович]] • [[Денисова, Татьяна Яковлевна]] • [[Данилова, Раисия Михайловна]] • [[Опера]] • [[Муро]]
 
 Тыгакак у статья-влакым возаш ушныза.
+
+[[Категорий:Портал:Сымыктыш]]
