*Empty MediaWiki Message*

--- a/Портал:Сымыктыш.mw
+++ b/Портал:Сымыктыш.mw
@@ -33,7 +33,12 @@ __NOTOC__ __NOEDITSECTION__
 ----
 {{Портал:Сымыктыш/У статья-влак}}
 <div align="right"><small>{{Editme|Ямдылык:Портал:Сымыктыш/У статья-влак|text=Тӧрлаташ}}</small></div>
-
+|-
+| style="border: 2px solid #C0C0C0;border-top:none; background-color:#F9F9F9;border-left:none;border-right:none; padding:0.5em;" valign="top" |
+<div style="padding: 4px; text-align: left; font-family:Eurostile, 'Gill Sans', sans-serif; font-size:140%;">'''Тӧнеж-влак'''</div>
+----
+{{Портал:Сымыктыш/Тӧнеж-влак}}
+<div align="right"><small>{{Editme|Ямдылык:Портал:Сымыктыш/Тӧнеж-влак|text=Тӧрлаташ}}</small></div>
 |}
 <!-- ######################### Fin columna derecha #########################-->
 |---- valign="top"
