*Empty MediaWiki Message*

--- a/Кышкар:Портал:Сымыктыш%2FТӧнеж-влак.mw
+++ b/Кышкар:Портал:Сымыктыш%2FТӧнеж-влак.mw
@@ -3,3 +3,4 @@
 * [[В.И. Ленин лӱмеш тӱвыра полат (Йошкар-Ола)]]
 * [[Я.Эшпай лӱмеш тӱвыра полат]]
 * [[Сеҥымашын XXX-шо идалыкше лӱмеш тӱвыра полат (Йошкар-Ола)]]
+[[Категорий:Портал:Сымыктыш]]
