*Empty MediaWiki Message*

--- a/Кышкар:Портал:Сымыктыш%2FЗаставка.mw
+++ b/Кышкар:Портал:Сымыктыш%2FЗаставка.mw
@@ -1,1 +1,32 @@
-[[Файл:Gustav Klimt 041.jpg|180px]]
+{{#switch: {{#expr:{{#time:s}} mod 30 + 1}}
+|1=[[Файл:Nicholas Roerich, Guests from Overseas.jpg|250px|none]]
+|2=[[Файл:Vrubel Demon.jpg|250px|none]]
+|3=[[Файл:The Great Wave off Kanagawa.jpg|250px|none]]
+|4=[[Файл:Botticelli Venus.jpg|250px|none]]
+|5=[[Файл:Botticelli-primavera.jpg|250px|none]]
+|6=[[Файл:Universum.jpg|250px|none]]
+|7=[[Файл:Edouard Manet 004.jpg|250px|none]]
+|8=[[Файл:Die drei Bogatyr.jpg|250px|none]]
+|9=[[Файл:Edgar Germain Hilaire Degas 076.jpg|250px|none]]
+|10=[[Файл:Las_Meninas,_by_Diego_Velázquez,_from_Prado_in_Google_Earth.jpg|250px|none]]
+|11=[[Файл:Retable de l'Agneau mystique.jpg|250px|none]]
+|12=[[Файл:Rembrandt Harmensz. van Rijn 026.jpg|250px|none]]
+|13=[[Файл:Bathing of a Red Horse (Petrov-Vodkin).jpg|250px|none]]
+|14=[[Файл:07leucip.jpg|250px|none]]
+|15=[[Файл:Gustav Klimt 020.jpg|250px|none]]
+|16=[[Файл:Creation of Adam (Michelangelo) Detail.jpg|250px|none]]
+|17=[[Файл:Eugène Delacroix - La liberté guidant le peuple.jpg|250px|none]]
+|18=[[Файл:Red Fuji southern wind clear morning.jpg|250px|none]]
+|19=[[Файл:Klimt Danae.jpg|250px|none]]
+|20=[[Файл:Gustav Klimt 041.jpg|250px|none]]
+|21=[[Файл:Gauguin Stillleben mit Fruchtschale und Zitronen.jpg|250px|none]]
+|22=[[Файл:Mikhail Nesterov 001.jpg|250px|none]]
+|23=[[Файл:Claude Monet, Impression, soleil levant.jpg|250px|none]]
+|24=[[Файл:Pierre-Auguste Renoir 064.jpg|250px|none]]
+|25=[[Файл:BrullovKP OsadaPskovPolGTG.jpg|250px|none]]
+|26=[[Файл:Homme-vitruve.jpg|250px|none]]
+|27=[[Файл:MonaLisa sfumato.jpeg|250px|none]]
+|28=[[Файл:Study for the Head of Leda.jpg|250px|none]]
+|29=[[Файл:Brueghel-tower-of-babel.jpg|250px|none]]
+|30=[[Файл:Albrecht Dürer 003.jpg|250px|none]]
+}}
