*Empty MediaWiki Message*

--- a/Кышкар:Вики-каныш.mw
+++ b/Кышкар:Вики-каныш.mw
@@ -1,7 +1,7 @@
 {{ambox
  |type=discussion
  |image=[[Файл:Sun01.svg|40px|Кече]]
- |text=Тиде пайдаланыше кызыт [[Википедий:Вики-каныш|вики-канышыште]] улеш, тендан серышланда вашмутым пуен ок керт.
+ |text=Тиде пайдаланыше кызыт [[Википедий:Вики-каныш|вики-канышыште]] улеш, тыйын серышетлан вашмутым пуен ок керт.
  |text-small=Пӧртылеш {{#if:{{{1|}}}|—|}} '''{{{1|{{{date|пале огыл}}}}}}'''{{{2|{{{ps|.}}}}}}
  }}
 {{#if:{{{3|{{{date-en|}}}}}}{{{4|{{{ps-en|}}}}}}|
