*Empty MediaWiki Message*

--- a/Марий.mw
+++ b/Марий.mw
@@ -20,17 +20,17 @@
 '''Марий-шамыч''' ('''[[черемис]]''', '''меря''', '''çармăс''', '''чирмеш''') — [[Финн-угор калык-влак|финн-угор калык]] [[Россий|Российште]], [[Марий мланде|марий мландын]] тӱп калыкше, кызыт тӱҥ шотышто [[Марий Эл]] Республикыште. Тушто марий калыкын пелыж деч шукырак ужаш ила, 604 тӱжем еҥ ([[Национальный состав населения России в 2002 году|2002]]). Моло марий-шамыч вес вел да республиклаште Юл серыште да Уралыште илат. Марий-шамычын нылыт тӱшкем уло: [[Олык марий|олык]] (марий калыкын шукылыкшо, Юл да Виче эҥер коклаште илат), [[Курык марий|курык]] (пурла да шола Юл серыштыже), [[Эрвел марий|эрвел]] (Виче велыште, Суас Элыште, Пошкырт Элыште, Уралыште), да [[Йӱдвел-касвел марий|йӱдвел-касвел]] ([[Угарман вел|Угарман]], [[Кострома вел|Кострома]] да [[Киров вел|Киров]] веллаште) марий-шамыч. [[Марий йылме|Марла]] да [[Курыкмарий йылме|курык марла]] ойлат. Тиде йылмевлак урал ешын финнугор тӱшкаш пурат. Шуко эрвелмарийшамыч [[суас йылме|суасла]] моштат. Шочмо тын-влак: [[Юмынйӱла]] да [[Кугу сорта]]. Тыгак [[танле тын]]ым да [[Ислам|ислым]] кучышо еҥ-влак улыт.
 
 == Лекмаш ==
-В раннежелезном веке в Волго-Камье сложилась [[ананьинская археологическая культура]] (VIII-III вв. до н.э.), носители которой являлись далекими предками [[коми-зыряне|коми-зырян]], [[коми-пермяки|коми-пермяков]], [[удмурты|удмуртов]] и отчасти марийцев. Начало формирования этих народов относится к первой половине I тысячелетия.
-Область формирования марийских племен — правобережье [[Волга|Волги]] между устьями [[Сура (приток Волги)|Суры]] и [[Цивиль|Цивиля]] и противоположное левобережье вместе с нижним Поветлужьем. Основу марийцев составили потомки ананьицев, испытавших этническое и культурное влияние позднегородецких племен (предков [[мордва|мордвы]]).
-Из этого района марийцы расселялись в восточном направлении вплоть до [[Вятка (река)|р.&nbsp;Вятки]] и в южном до [[Казанка (река)|р.&nbsp;Казанки]].<ref>Этнология. Учебник. Для высших учебных заведений/Э.&nbsp;Г.&nbsp;Александренков, Л.&nbsp;Б.&nbsp;Заседателева, Ю.&nbsp;И.&nbsp;Зверева и др.-М.; Наука, 1994.</ref>
+
 
 == Эртымгорно ==
-Первое упоминание о черемисах встречается в VI в. у готского историка [[Иордан (историк)|Иордана]]. Предки современных марийцев между [[V век|V]] и [[VIII век]]ом взаимодействовали с [[готы|готами]], позднее с [[хазары|хазарами]] и [[Волжская Булгария|Волжской Булгарией]]. Между [[XIII век|XIII]] и [[XV век]]ом марийцы входили в состав [[Золотая Орда|Золотой Орды]] и [[Казанское ханство|Казанского ханства]]. После завоевания Казанского ханства в [[1552 год]]у ранее зависевшие от него марийские земли стали частью [[Россия|российского]] государства. [[4 октября]] [[1920]] был провозглашён автономный округ марийцев в составе [[РСФСР]], [[5 декабря]] [[1936]] — АССР.
+"Черемис" мутлан келшыше мутым эн ончыч VI курымышто гот историк Иордан кучылтын. Но "имнискарис" мутым "черемис" мут дене таҥастараш йӧсырак. Кызытсе марий-влакын кугезе-влакышт [[V курым|V]] да [[VIII курым]] коклаште гот, хазар калык дене, Волжск Булгарий дене кылым кучен. [[XIII курым|XIII]] ден [[XV курым]] коклаште марий-влак Шӧртньӧ Ордашке пуреныт, Озаҥ ханствыште лийыныт. Кунам руш армий Озаҥ ханствым 1552-шо ийыште сеҥеныт, марий мланде Россий Кугыжанышыш пурен. [[4 Кылме|4 Кылме]] [[1920]] ийыште марий-влаклан РСФСР-ыште автономийым пуеныт, [[5 Теле]] [[1936]] — АССР лийын.
 
 Ончыч марий-влак руш да суас ӱчашымаш деч [[Юл]] сер деч [[Вӱтла]] эҥерын кӱшыл ужашышкыже куржыныт. Тыште марий-влаклан шукырак эрык лийын, руш князь-влак да суас хан-влак дечат тораште. Вӱтламарий коклаште {{comment|сар демократий|военный демократий}} шочын. Тудо икмыняр рушла ийсерышыште "Ветлужское черемисское княжество" семын палемдалтын. Вӱтламарий-влак тыгай мут-влакым кучалтыныт: кугуз - кугыза, да кугузвыж - кугыжаныш.
 
 Кугуз-влак эн патыр, кугу пагалымаш сарзе кокла гыч ойырымо (сайлыме) вуйлатыше-влак лийыныт, докан. Икмыняр кугызын лӱмышт ийсерышлаште возалт кодын: [[Ходжа-Яралтем]], [[Кай]], [[Бай-Пондаш]], [[Кельдибек]], [[Ибраг]]. Нунын шкеныштын "пеҥгыдемдыме вер" (ола манаш лиеш) лийыныт: [[Ветля-Юр]], [[Шанган]] да молат.
-
+== Марий калыкын тистыже ===
+[[Файл:Пеледыш пайрем 2011.jpg|thumb|320px|left|Марий калыкын тистыжым [[Пеледыш пайрем]]ыште наҥгаят.]]
+Марий калыкын тистыжым [[Марий Ушем]]ын погынымашыштыже пеҥгыдемденыт. Марий Элын тистыж деч ойыртемалтеш. Кум тӱс гыч шога, ош тӱс чимарийын яндарлыкшым ончыкта, йошкар тӱс - , шем тӱс мланде дене кылдалтеш.
 == Лӱмлö марий-шамыч ==
 
 * [[Васильев, Валериан Михайлович]] — [[йылмышанчызе]], этнограф, фольклорист, [[сылнымутчо]]
