*Empty MediaWiki Message*

--- a/Марий_Тӱрек_кундем.mw
+++ b/Марий_Тӱрек_кундем.mw
@@ -1,9 +1,35 @@
+[[Файл:File.png|300px|thumb|Марий Тӱрек кундемыш пурымашыште]]
 '''Марий Тӱрек кундем''' — кундем [[Марий Эл]]ыште.
 
 Рӱдӧ: [[Марий Тӱрек]] [[ола сынан кугыял]].
 
-==Ял-влак==
+== Кӧргӧ шеледымаш ==
+=== Алексеевский ял шотан илем ===
+=== Карлыган ял шотан илем ===
+(Шукерте огыл Сардаял сельсовет тышке ушнен)
+
+=== Косолоп ял шотан илем ===
+
+=== Сысоево ял шотан илем (ондаксе Малинкинский сельсовет) ===
+
+=== Марий Пыламарий ял шотан илем ===
+(Шукерте огыл Нартас сельсовет тышко ушнен)
+
+=== Марийский ял шотан илем ===
+
+=== Марий Купто ял шотан илем ===
+
+=== Марий Тӱрек посёлко шотан илем ===
+(Шукерте огыл Тат-Китня сельсовет ден Алексеевский сельсовет-шамыч тышке ушненыт)
+
+
+=== Хлебниково ял шотан илем ===
+(Шукерте огыл Опаринысе сельсовет тышке ушнен)
+
+
+
 * [[Кожлаял]]
+
 
 {{Марий Эл}}
 
