*Empty MediaWiki Message*

--- a/Марий_Тӱрек_кундем.mw
+++ b/Марий_Тӱрек_кундем.mw
@@ -1,7 +1,20 @@
 [[Файл:File.png|300px|thumb|Марий Тӱрек кундемыш пурымашыште]]
-'''Марий Тӱрек кундем''' — кундем [[Марий Эл]]ыште.
-
+'''Марий Тӱрек кундем''' ({{lang-ru|''Мари-Турекский район''}})— [[Марий Эл]]ысе кундем. Республикын эрвелныже верланен. [[Йӱдвел]]-[[эрвел]]ныла [[Киров вел]] дене, [[кечывалвел]]-эрвелныла - [[Татарстан республик]], касвелне Марий Элын [[Шернур кундем|Шернур]], [[Поранча кундем|Поранча]], [[Морко кундем]]ла дене [[чек]] уло.
 Рӱдӧ: [[Марий Тӱрек]] [[ола сынан кугыял]].
+== Географий ==
+Кумдык:1,5 тӱж. меҥ².
+Кужыт: 76 меҥ.
+Лопкыт: 36 меҥ.
+Калыкчот: 28 тӱжем еҥ наре.
+
+Тыште шуко корем, курык уло. Нур, олык, чодра, куэр-влак дене верысе пӱртӱс поян. Илем-влак эн чӱчкыдын ӱлнырак верланеныт, кӱкшытыштӧ огыл. [[Марий]]-влак дене ваш келшен [[руш]], [[суас]], [[удмурт]]-влакат пырля илат.
+
+== Эртык ==
+Марий Тӱрек кундемын эртымгорныжо Вятке край дене кылдалтын. Кокымшо тӱжем идалыкыште ты вер марий-влакын рӱдерышкышт савырнаш тӱҥалын. Варажым Виче эҥерыште Малмыж княжество шочын. Марий-влакын феодальный ушемышт лийын, кызытсе Марий Тӱрек кундемын ужашыже тушко пурен. [[Озаҥым налмаш]] годым малмыж князь [[Полтыш]], виче марий-влакын вуйлатышыже суас-влак велыште кредалын. А тунам курыкмарий-влак Акпарсын вуйлатымыж почеш руш-влаклан полшеныт.
+
+Кунам Озаҥ сеҥалтын, марий мланде Россий кугыжанышыш пурен марий-влак эрык-верч кредалмашым тӱҥалыныт. XVI курымысо историйыште тиде событий-влак «черемис сар» семын возалт кодыныт. 
+
+Верысе калыкым чыштырен кучашлан XVI курым мучашыште москосо виктем марий мландыште форпост-ола-влакым чоҥаш тӱҥалыныт. 1584-ше ийыште Вӱрзым эҥер серыште Уржум олам чоҥеныт, тудо вигак уездын рӱдерже лийын, тушко кызытсе Марий Тӱрек кундемын ужашыжым пуртеныт. Ты жапыштак марий-влакын Малмыжым руш крепостьыш савыреныт. Ты верлаште марий-влаклан апшат пашм шукташ, ола деке лишемашат чареныт. Кугу эҥерла гычат нуным поктен колтеныт. Тунам Марий мландын тӱржӧ изиш касвелкыла куснен. Тӱрек ола гыч кайымеке, марий-влак у илемым чоҥеныт, тошто лӱмымак коденыт, тыге [[Марий Тӱрек]] шочын.
 
 == Кӧргӧ шеледымаш ==
 === Алексеевский ял шотан илем ===
