*Empty MediaWiki Message*

--- a/Акватлон.mw
+++ b/Акватлон.mw
@@ -1,7 +1,8 @@
-'''Акватлон''' ({{{{lang-grc|ἆθλον}}|Aqua}} — вӱд да {{lang-grc|ἆθλον}} — кучедалмаш, таҥасымаш) — вудйымалсе кучедалмаш. 
+[[Файл:Акватлон.jpg|200px|thumb|Спортсмен-влак таҥасат.]]
+'''Акватлон''' ({{lang-la|ἆθλον}}|Aqua}} — вӱд да {{lang-grc|ἆθλον}} — кучедалмаш, таҥасымаш) — вудйымалсе кучедалмаш. 
 
 == Эртымгорно ==
-Спортын тиде толкынжо 1982 ийште шыҥдаралташ тӱҥалын. Москосо институтышто вӱд йымалне ийышыше спорт группо чӱчкыдынрак да чӱчкыдынрак вӱд йымалне кучедалмашке ушнаш тӱнальыч. Группым Игорь Островский вуйлатен. Эркын-эркын икмыняр правиле шочын, тыге спортын у тӱрлыклан негызым пыштыме.
+[[Спорт]]ын тиде толкынжо [[1982]] ийыште шыҥдаралташ тӱҥалын. Москосо институтышто вӱд йымалне ийышыше спорт группо чӱчкыдынрак да чӱчкыдынрак вӱд йымалне кучедалмашке ушнаш тӱнальыч. Группым Игорь Островский вуйлатен. Эркын-эркын икмыняр правиле шочын, тыге спортын у тӱрлыклан негызым пыштыме.
 Островский Израиль кундемыш илаш куснен, тушто тудо Вӱдйымал спорт Федерацийым вулаташ тӱҥалын. Тыгак Игорь Островскийым Калык-влакгокласе "Акватлон" Ассоциацийын президентлан сайленыт.
 
 == Кучедалмаш нерген ==
