*Empty MediaWiki Message*

--- a/Акватлон.mw
+++ b/Акватлон.mw
@@ -1,5 +1,5 @@
 [[Файл:Акватлон.jpg|200px|thumb|Спортсмен-влак таҥасат.]]
-'''Акватлон''' ({{lang-la|ἆθλον}}|Aqua}} — вӱд да {{lang-grc|ἆθλον}} — кучедалмаш, таҥасымаш) — вудйымалсе кучедалмаш. 
+'''Акватлон''' ({{lang-la|Aqua}} — вӱд да {{lang-grc|ἆθλον}} — кучедалмаш, таҥасымаш) — вудйымалсе кучедалмаш. 
 
 == Эртымгорно ==
 [[Спорт]]ын тиде толкынжо [[1982]] ийыште шыҥдаралташ тӱҥалын. Москосо институтышто вӱд йымалне ийышыше спорт группо чӱчкыдынрак да чӱчкыдынрак вӱд йымалне кучедалмашке ушнаш тӱнальыч. Группым Игорь Островский вуйлатен. Эркын-эркын икмыняр правиле шочын, тыге спортын у тӱрлыклан негызым пыштыме.
