*Empty MediaWiki Message*

--- a/Акватлон.mw
+++ b/Акватлон.mw
@@ -2,14 +2,14 @@
 '''Акватлон''' ({{lang-la|Aqua}} — вӱд да {{lang-grc|ἆθλον}} — кучедалмаш, таҥасымаш) — вудйымалсе кучедалмаш. 
 
 == Эртымгорно ==
-[[Спорт]]ын тиде толкынжо [[1982]] ийыште шыҥдаралташ тӱҥалын. Москосо институтышто вӱд йымалне ийышыше спорт группо чӱчкыдынрак да чӱчкыдынрак вӱд йымалне кучедалмашке ушнаш тӱнальыч. Группым Игорь Островский вуйлатен. Эркын-эркын икмыняр правиле шочын, тыге спортын у тӱрлыклан негызым пыштыме.
-Островский Израиль кундемыш илаш куснен, тушто тудо Вӱдйымал спорт Федерацийым вулаташ тӱҥалын. Тыгак Игорь Островскийым Калык-влакгокласе "Акватлон" Ассоциацийын президентлан сайленыт.
+[[Спорт]]ын тиде толкынжо [[1982]] ийыште шыҥдаралташ тӱҥалын. [[Моско]]со институтышто вӱд йымалне ийышыше спорт группо чӱчкыдынрак да чӱчкыдынрак вӱд йымалне кучедалмашке ушнаш тӱнальыч. Группым Игорь Островский вуйлатен. Эркын-эркын икмыняр правиле шочын, тыге спортын у тӱрлыклан негызым пыштыме.
+Островский [[Израиль]] кундемыш илаш куснен, тушто тудо Вӱдйымал спорт Федерацийым вулаташ тӱҥалын. Тыгак Игорь Островскийым Калык-влакгокласе "Акватлон" Ассоциацийын президентлан сайленыт.
 
 == Кучедалмаш нерген ==
 Айдеме вӱдышто да вӱд йымалне шкенжым кучен моштыжо манын, тыгай кучедалмаш да упражнений системым шонен лукмо. Пырля тудо акватлон маналтеш.
 Акватлон вич ужаш гыч шога: спорт ужаш, сар кучедалмаш, прикладной, гимастик ужаш да ямдылалтмаш. 
-Таҥасымаш-влак спорт ужаш дене гына эртат. Тыште спортсмен-влак ластым чиен кучедалыт. Прикладной да сар кучедалмаш ужаш дене спасатель, водолаз, каскадер да спецназъеҥ-влак ямдылалатме годым пайдаланат. Ямдылалтмаш ужашым чылан эртышаш улыт. 
-Акватлонышто ластым чиен кучедалыт. Тиде кучедалмашшке кажне еҥ ушнен ок керт. [[Поръен]], ластым чиен, 50 метрым эртен кертшаш, рвезе - 25 метрым. 
+Таҥасымаш-влак спорт ужаш дене гына эртат. Тыште спортсмен-влак ластым чиен кучедалыт. Прикладной да сар кучедалмаш ужаш дене [[Россий МЧС|спасатель]], водолаз, каскадер да спецназъеҥ-влак ямдылалатме годым пайдаланат. Ямдылалтмаш ужашым чылан эртышаш улыт. 
+Акватлонышто ластым чиен кучедалыт. Тиде кучедалмашышке кажне еҥ ушнен ок керт. [[Поръен]], ластым чиен, 50 метрым эртен кертшаш, рвезе - 25 метрым. 
 Когынек ластышкыжат 25 сантиметр кужутан тасмам кылдат. Лач тиде тасмамак спортсмен-влак икте весыжын кӱрлын налшаш улыт. Могай спортсмен лентам эн ончыч налын ончыкта - тудо сеҥыше лиеш. 
 Тиде кучедалмашыште тавалышын вуйжым, шӱйжым тӱкаш ок лий. 
 Танасымаш кум раунд гыч шога. Кажныже 30 секунд. Раунд-влак коклаште 1,5 минут наре каналташ лиеш. 
@@ -29,3 +29,5 @@
 
 == Кылвер-влак ==
 * [http://www.divetver.ru/index.php?categoryID=153&PHPSESSID=dc4fac9b59e3cd51d837b4f4f5465603 Дайвер клубын сайтше]
+
+[[Категорий:Спорт тӱрлык-влак]]
