*Empty MediaWiki Message*

--- a/Планетарий.mw
+++ b/Планетарий.mw
@@ -1,6 +1,11 @@
 [[Файл:Moscow-planetarium.jpg|thumb|right|160px|[[Москосо планетарий]]]]
 '''Планетарий''' — лӱмын ыштыме пӧртыштӧ [[шӱдыр]] але [[планета]]-влакын чоҥештылмашыштым [[кава]]н модельыштыже ончыктымаш.
 
+
+==знешнія спасылкі==
+* [http://www.aplf-planetariums.info/en/ Planetariums Worldwide list APLF-IPS]  Планетарыі сусветны спіс
+
+
 [[Категорий:Планетарий-влак]]
 
 [[ar:بلانتاريوم]]
