--- a/Леонтьев,_Валерий_Яковлевич.mw
+++ b/Леонтьев,_Валерий_Яковлевич.mw
@@ -1,8 +1,9 @@
 [[Файл:Leontiev piter04.jpg|thumb|228px|]]
 
-'''Валерий Яковлевич Леонтьев''' (усть-уса, [[19 Ага]] [[1949]]) руш музыкант.
+'''Валерий Яковлевич Леонтьев''' ([[19 Ага]] [[1949]], Усть-Уса ял [[Коми республик]] [[РСФСР]]) — советысе да российысе мурызо, актёр. Российын калык артистше (1996 ий), Чап орденын да "За заслуги перед Отечеством" IV степенян орденын кавалерже.
 
 [[Категорий:1949 ийыште шочшо-влак]]
+[[Категорий:Мурызо]]
 
 [[af:Valery Leontiev]]
 [[als:Valery Leontiev]]
