--- a/Марий.mw
+++ b/Марий.mw
@@ -22,7 +22,7 @@
 == Лекмаш ==
 
 == Эртымгорно ==
-"Черемис" мутлан келшыше мутым эн ончыч VI курымышто гот историк Иордан кучылтын. Но "имнискарис" мутым "черемис" мут дене таҥастараш йӧсырак. Кызытсе марий-влакын кугезе-влакышт [[V курым|V]] да [[VIII курым]] коклаште гот, хазар калык дене, Волжск Булгарий дене кылым кучен. [[XIII курым|XIII]] ден [[XV курым]] коклаште марий-влак Шӧртньӧ Ордашке пуреныт, Озаҥ ханствыште лийыныт. Кунам руш армий Озаҥ ханствым 1552-шо ийыште сеҥеныт, марий мланде Россий Кугыжанышыш пурен. [[4 Кылме|4 Кылме]] [[1920]] ийыште марий-влаклан РСФСР-ыште автономийым пуеныт, [[5 Теле]] [[1936]] — АССР лийын.
+"Черемис" мутлан келшыше мутым эн ончыч VI курымышто гот историк Иордан кучылтын. Но "имнискарис" мутым "черемис" мут дене таҥастараш йӧсырак. Кызытсе марий-влакын кугезе-влакышт [[V курым|V]] да [[VIII курым]] коклаште гот, хазар калык дене, Волжск Булгарий дене кылым кучен. [[XIII курым|XIII]] ден [[XV курым]] коклаште марий-влак Шӧртньӧ Ордашке пуреныт, Озаҥ ханствыште лийыныт. Кунам руш армий Озаҥ ханствым 1552-шо ийыште сеҥеныт, марий мланде Моско Кугыжанышыш пурен. [[4 Кылме|4 Кылме]] [[1920]] ийыште марий-влаклан РСФСР-ыште автономийым пуеныт, [[5 Теле]] [[1936]] — АССР лийын.
 
 Ончыч марий-влак руш да суас ӱчашымаш деч [[Юл]] сер деч [[Вӱтла]] эҥерын кӱшыл ужашышкыже куржыныт. Тыште марий-влаклан шукырак эрык лийын, руш князь-влак да суас хан-влак дечат тораште. Вӱтламарий коклаште {{comment|сар демократий|военный демократий}} шочын. Тудо икмыняр рушла ийсерышыште "Ветлужское черемисское княжество" семын палемдалтын. Вӱтламарий-влак тыгай мут-влакым кучалтыныт: кугуз - кугыза, да кугузвыж - кугыжаныш.
 
