*Empty MediaWiki Message*

--- a/Кышкар:Портал:Сымыктыш%2FТӧнеж-влак.mw
+++ b/Кышкар:Портал:Сымыктыш%2FТӧнеж-влак.mw
@@ -4,3 +4,4 @@
 * [[Я.Эшпай лӱмеш тӱвыра полат]]
 * [[Сеҥымашын XXX-шо идалыкше лӱмеш тӱвыра полат (Йошкар-Ола)]]
 [[Категорий:Портал:Сымыктыш]]
+* [[Марий кугыжаныш университет]]
