--- a/Акватлон.mw
+++ b/Акватлон.mw
@@ -31,3 +31,5 @@
 * [http://www.divetver.ru/index.php?categoryID=153&PHPSESSID=dc4fac9b59e3cd51d837b4f4f5465603 Дайвер клубын сайтше]
 
 [[Категорий:Спорт тӱрлык-влак]]
+
+[[en:Aquathlon]]
