*Empty MediaWiki Message*

--- a/Чоткар.mw
+++ b/Чоткар.mw
@@ -1,9 +1,9 @@
 [[Файл:Chotkar.jpg|thumb|250px|Чоткар патыр]]
 '''Чоткар''' - [[марий]] [[патыр]], [[Юлсер кундем]]ыште, [[Корамас]] ялыште шочын. Тоштыеҥ ой почеш, Чоткар марийын кугыжаже лийын. Чоткар пеш виян улмаш. Иктат сеҥен кертын огыл тудым. Марий Сылнымут классикше-влакат тиде образым шке произведенийлаштышт шагал огыл кучылтыныт.
 
-Юлсер кундемышто Корамас ял воктене [[2002]] ийыште Чоткарлан [[чапкӱ]]ым пыштыме.
+Юлсер кундемыште Корамас ял воктене [[2002]] ийыште Чоткарлан [[чапкӱ]]ым пыштыме.
 
-[[Чавайн, Сергей Григорьевич|Сергей Чавайн]], [[Шабдар Осып]] да [[Олык Ипай]] [[1936]] ийыште кумытын "Чоткар патыр нерген мур" кугу поэмым возеныт. Тудо ятыр жап мыланна палыме киен, да "Ончыко" журналын 1992 ий 5-ше номерешыже Г. Зайниевын тыршымыжлан кӧра савыкталтын.
+[[Чавайн, Сергей Григорьевич|Сергей Чавайн]], [[Шабдар Осып]] да [[Олык Ипай]] [[1936]] ийыште кумытын "Чоткар патыр нерген мур" кугу поэмым возеныт. Тудо ятыр жап мыланна палыме киен, да "Ончыко" журналын 1992 ий 5-ше номерешыже [[Г. Зайниев]]ын тыршымыжлан кӧра савыкталтын.
 
 ==Тыгеак ончо==
 * [[Полтыш]]
