*Empty MediaWiki Message*

--- a/Метрополитен.mw
+++ b/Метрополитен.mw
@@ -1,9 +1,19 @@
 '''Метрополитен''' ({{lang-fr|Métro}}).
 
-== Метрополитен-влак ==
+== Метрополитен-влак [[Россий]]ыште ==
 * [[Москосо метрополитен]]
 * [[Петербургысо метрополитен]]
-* [[Алматысе метрополитен]]
+* [[Озаҥысе метрополитен]]
+* [[Самарысе метрополитен]]
+* [[Угарманысе метрополитен]]
+* [[Качырыноласе метрополитен]]
+* [[Новосибирскысе метрополитен]]
+
+== Метрополитенысе сервис-влак ==
+Станции могут быть оборудованы:
+* [[Immagine:Feature accessible.svg|24px|Accessibile]] [[Accessibilità (urbanistica)|Accessibilità]] per portatori di [[Handicap (medicina)|handicap]]
+* [[Immagine:Feature elevators.svg|24px|Лифт]] [[Лифт|Лифтом]]
+* [[Immagine:Feature escalators.svg|24px|Эскалатор]] [[Эскалатор|Эскалатором]]
 
 [[Категорий:Метрополитен]]
 
