--- a/Метрополитен.mw
+++ b/Метрополитен.mw
@@ -11,9 +11,9 @@
 
 == Метрополитенысе сервис-влак ==
 Станции могут быть оборудованы:
-* [[Immagine:Feature accessible.svg|24px|Accessibile]] [[Accessibilità (urbanistica)|Accessibilità]] per portatori di [[Handicap (medicina)|handicap]]
-* [[Immagine:Feature elevators.svg|24px|Лифт]] [[Лифт|Лифтом]]
-* [[Immagine:Feature escalators.svg|24px|Эскалатор]] [[Эскалатор|Эскалатором]]
+* [[Файл:Feature accessible.svg|24px|Accessibile]] [[Accessibilità (urbanistica)|Accessibilità]] per portatori di [[Handicap (medicina)|handicap]]
+* [[Файл:Feature elevators.svg|24px|Лифт]] [[Лифт|Лифтом]]
+* [[Файл:Feature escalators.svg|24px|Эскалатор]] [[Эскалатор|Эскалатором]]
 
 [[Категорий:Метрополитен]]
 
