--- a/6_кылме.mw
+++ b/6_кылме.mw
@@ -1,16 +1,82 @@
 {{Кылме}}
 '''6 Кылме''' — [[григориан кечышот]] почеш идалыкын 310-шо (кужемдыме ийлаште 311) кечыже. Идалык пытыме марте 55 кече кодеш.
 == Пайрем-влак ==
+* {{Флаг ООН}} - [[ сар да сар конфликт годым пӱртӱсым аралыме тӱнямбал кече ]]
+* {{Флагификация|Доминиканская Республика}} - Конституцийын кечыже
+* [[Файл:Flag of Tatarstan.svg|24px]] Татарстан - Конституцийын кечыже 
+* {{Узбекистан}} [[Узбекистан]] - [[Тӱвыра пашаеҥын кечыже]]
 
 == Лӱмгече ==
+* [[Лаврентий]]
+* [[Алексей]]
+* [[Иван]]
+* [[Николай]]
+* [[Пётр]]
+* [[Афанасий]]
 
 == Мо лийын ==
-''Тыгак ончо: [[:Категорий:6 Кылме Мо лийын]]''
+* [[1632]] - колымешке [[ Швециийын корольжо ]] [[Густав II Адольф]] («Северный Лев») сусырген
+* [[1736]] — [[Ломоносов, Михаил Васильевич|Михаил Ломоносов]] [[Германий]]ысе [[Марбургский университет]]ыш тунемаш пурен
+* [[1772]] - Россий Империй ден Осман империйын флот коклаште [[Патрасский кучедалмаш]] тӱҥалын.
+* [[1844]] — [[Доминикан Республике]] Испан иго деч утлен. 
+* [[1887]] - "Селтик" шотландийысе футбол клуб шочын
+* [[1906]] - [[Вильнюс]] олаште "Бируте" 1 литовский оперым шындыме
+* [[1923]] -Польшышто [[Краковысо восстаний]] тӱҥалеш
+* [[1932]] — завод «[[Динамо (завод)|Динамо]]» [[икымше советский тепловоз]]ым [[Электровоз ВЛ19|ВЛ19-01]] луктыныт
+* [[1935]] - истребительын икымше чоҥештымаш лийын
+* [[1941]] — 7 кылме Йошкар Площадьыште погынышо сарзе парад  Совет калык деке  [[Сталин, Иосиф Виссарионович|Сталинын]] обращенийже 
+* [[1943]]:
+** [[Генерал Ватутин]]ын вуйлатыме [[1-ше Укарин фронт]]ын сарзе вийже [[Днепр кредалмаш]] годым [[Киев]]ым утареныт. 
+** Совет Армий вооруженийышке [[ИСУ-152 самоходка- влак]] мияш тӱҥалыныт. 
+* [[1957]] - Ленинградыште икымше [[Курымашлык тул]]ым почыныт
+* [[1958]] - [[Астрахань ола]]ште [[Владимир Ильич Ленин]]лан памятникым почыныт. 
+* [[1967]] - [[Сарзе Теҥыз Флотын Генеральный Штаб]]ын классификацийже почеш эксплуатацийыш икымше [[стратегический сынан вӱдйымалсе ракет крейсер]]ым пуртымо
+* [[1975]] - [[Саяногорск]] олалан негызым пыштыме 
+* [[1991]]:
+** [[РСФСР Президент]]ын кӱштыкшӧ почеш [[КПСС партий]]ын пашажым савырыме
+** [[Кувейт]]ыште [[ирак оккупант влак]]ын йӱлалтен кодымо пытартыш [[нефть скважин]]ым йӧртымӧ. Тиде кечым [[Кувейт]]ын кечыже семын палемдат 
+* [[ 2008 ]] - [[Владикавказ]]ыште [[террористический акт]] лийын
+* [[ 2009 ]] - [[Татар пролив]]ыште  [[ТУ-142 самолёт]] катастрофа лийын
+''Тыгак ончо: [[:Категорий:6 Кылме Мо лийын]]''1
 
 == Кӧ шочын ==
+* [[15]] — [[Агриппина Младшая]] - [[Рим император Клавдий]]ын пелашыже 
+* [[1479]] — [[Иоанна Кастильская]] - [[Шнуй Рим империй]] [[император Карл 6]] аваже
+* [[1494]] — [[Сулейман Великолепный]] - [[Осман Империй]]ын [[султан]]же
+* [[1794]] — [[Тон, Константин Андреевич|Константин Андреевич Тон]] - руш архитектор , [[Храм Христа Спасителя]] сооруженийын авторжо
+* [[1814]] — [[Сакс, Адольф|Адольф Сакс]] - [[Бельгий]]ысе семӱзгар кидмастар , [[Саксофон]] изобретатель
+* [1835]] — [[Ломброзо, Чезаре|Чезаре Ломброзо]], итальян медик, антрополог
+* [[1852]] — [[Мамин-Сибиряк, Дмитрий Наркисович|Дмитрий Наркисович Мамин-Сибиряк]] - руш возышо
+* [[1854]] — [[Суза, Джон Филип|Джон Филип Суза]] - дирижёр, семмастар "Маршын корольжо"
+* [[1861]] — [[Нейсмит, Джеймс|Джеймс Нейсмит]] - канадысе физкультурник,  [[1891]] ийыште [[баскетбол]] модышым шонен луктын 
+* [[1865]] — [[Прянишников, Дмитрий Николаевич|Дмитрий Николаевич Прянишников]], руш [[агрохимик]]
+* [[1900]] — [[Новиков, Александр Александрович (маршал)|Александр Александрович Новиков]] - [[СССР маршал]] 2 гана [[Совет Союз Герой]]
+*  [[1914]] — [[Харрис, Джонатан|Джонатан Харрис]], актёр
+* [[1916]] — [[Конниф, Рэй|Рэй Конниф]], композитор, дирижёр
+* [[1921]] — [[Джонс, Джеймс|Джеймс Джонс]], возышо
+* [[1931]] — [[Николс, Майк|Майк Николс]], режиссёр
+* [[1936]] — [[Лотяну, Эмиль|Эмиль Лотяну]], молдавийысе кинорежиссёр
+* [[1940]] — [[Сурикова, Алла Ильинична|Алла Ильинична Сурикова]], кинорежиссёр
+* [[1943]] — [[Саша Соколов]], руш возышо-постмодернист
+* [[1947]] — [[Селезнёв, Геннадий Николаевич|Геннадий Николаевич Селезнёв]], руш политик
+* [[1959]] — [[Сайдел, Эрик|Эрик Сайдел]], покер модыш дене профессиональный модшо
+* [[1961]] — [[Паньи, Флоран|Флоран Паньи]], мурызо 
+* [[1973]] — [[Максимушкин, Андрей Владимирович|Андрей Максимушкин]], возышо-фантаст
 ''Тыгак ончо: [[:Категорий:6 Кылме Кӧ шочын]]''
 
 == Кӧ колен ==
+* [[1192]] — [[Варлаам Хутынский]], Спасо-Преображенский монастьырым негызлыше
+*  [[1672]] — [[Шютц, Генрих|Генрих Шютц]] ({{langi|de|Heinrich Schütz}}) (р.&nbsp;[[1585]]), немыч композитор, органист, дирижёр, педагог
+* [[1855]] — [[Давыдов, Василий Львович|Василий Львович Давыдов]], [[декабристы|поэт-декабрист]]
+* [[1887]] — [[Потье, Эжен|Эжен Потье]] , француз поэт,  «Интернационалын» авторжо
+* [[1893]] — [[Чайковский, Пётр Ильич|Пётр Ильич Чайковский]], руш композитор , 10 опер, 3 балет, 6 симфонийын, 104 романсын авторжо 
+* [[1905]] — [[Уильямс, Джордж|Джордж Уильямс]] , «[[YMCA]]» (Самырык Христиан Ушемым негызлыше
+* [[1964]] — [[Пьерон, Анри|Анри Пьерон]] , француз психолог
+* [[1964]] — [[Самосуд, Самуил Абрамович|Самуил Абрамович Самосуд]], кумдан палыме руш режиссёр
+* [[1989]] — [[Горлов, Николай Матвеевич|Николай Матвеевич Горлов]],  кино да театрын совет актержо
+* [[1994]] — [[Лиходеев, Леонид Израилевич|Леонид Израилевич Лиходеев]], руш возышо
+* [[2000]] — [[Станюта, Стефания Михайловна|Стефания Михайловна Станюта]], белорусс актриса, СССрын калык артисткыже
+
 ''Тыгак ончо: [[:Категорий:6 Кылме Кӧ колен]]''
 
 == Калык пале ==
