--- a/Метрополитен.mw
+++ b/Метрополитен.mw
@@ -11,7 +11,7 @@
 
 == Метрополитенысе сервис-влак ==
 Станции могут быть оборудованы:
-* [[Файл:Feature accessible.svg|24px|Accessibile]] [[Accessibilità (urbanistica)|Accessibilità]] per portatori di [[Handicap (medicina)|handicap]]
+* [[Файл:Feature accessible.svg|24px|Доступность]] Средствами доступности для передвижения [[Инвалид|инвалидов]]
 * [[Файл:Feature elevators.svg|24px|Лифт]] [[Лифт|Лифтом]]
 * [[Файл:Feature escalators.svg|24px|Эскалатор]] [[Эскалатор|Эскалатором]]
 
