*Empty MediaWiki Message*

--- a/ВАЗ-2101.mw
+++ b/ВАЗ-2101.mw
@@ -1,5 +1,1 @@
-| Лӱм = Ваз-2101
-| модель =
-| фото = ВАЗ-2101.jpg
-| производитель = [[АвтоВАЗ|Волжский автомобильный завод]]
-| вес лӱм = Lada 1200, Lada 1300, Lada 1200S
+'''Ваз-2101 Жигули'''-совет жапысе [[шеҥгел привод]]ан автомашина [[седан кузов]] дене. [[АВТОВАЗ]]ын икымше ыштен лукмо автомобиль модель.
