--- a/ВАЗ-2101.mw
+++ b/ВАЗ-2101.mw
@@ -1,5 +1,5 @@
 '''Ваз-2101 Жигули'''-совет жапысе [[шеҥгел привод]]ан автомашина [[седан кузов]] дене. [[АВТОВАЗ]]ын икымше ыштен лукмо автомобиль модель.
 
-Ваз-201 автомашина негызеш шенгел приводан "Классика" автомобиль радамым ыштен лукмо кудыжо кызытсе жап мартеат АВТОВАЗын конвейерыштыже шога. 
+Ваз-201 автомашина негызеш шеҥгел приводан "Классика" автомобиль радамым ыштен лукмо кудыжо кызытсе жап мартеат АВТОВАЗын конвейерыштыже шога. 
 
 1972 ийыште тиде машинам ыштен лукмылан ВАЗ заводлан "Шортньо Меркурий" Тӱнямбал премийым пуымо. 2000 ийыште ВАЗ-2101 автомобильлан  20 курымын автомашинаже лӱмым пуымо.
