--- a/Скрипке.mw
+++ b/Скрипке.mw
@@ -1,16 +1,16 @@
-{{Вес ыҥ-влак|Скрипка (ыҥ-влак)}}
-[[Файл:Violin VL100.jpg|thumb|200px|Скрипка]]
-'''Скри́пка''' ({{lang-it|violino}}, {{lang-fr|violon}}, {{lang-de|Violine}} или ''Geige'') — кӱкшӧ регистран смычокан {{comment|кылан|струнный}} семӱзгар. Кызытсе сыным да тӱсым [[XVI курым]]ышто налын, [[XVII курым]]ышто чот шарлен. Ныл струнаже уло.
+{{Вес ыҥ-влак|Скрипке (ыҥ-влак)}}
+[[Файл:Violin VL100.jpg|thumb|200px|Скрипке]]
+'''Скри́пке''' ({{lang-it|violino}}, {{lang-fr|violon}}, {{lang-de|Violine}} или ''Geige'') — кӱкшӧ регистран смычокан {{comment|кылан|струнный}} семӱзгар. Кызытсе сыным да тӱсым [[XVI курым]]ышто налын, [[XVII курым]]ышто чот шарлен. Ныл струнаже уло.
 
 == Ужаш-влак ==
 <gallery caption="Части корпуса">
 Файл:Violin front view.jpg|Корпус скрипки
-Файл:Vuillaume violin backside.jpg|Скрипка работы [[Вийом, Жан Батист|Жана Батиста Вийома]], нижняя дека
-Файл:Violin Vuillaume.jpg|Скрипка работы [[Вийом, Жан Батист|Жана Батиста Вийома]], верхняя дека
+Файл:Vuillaume violin backside.jpg|Скрипке работы [[Вийом, Жан Батист|Жана Батиста Вийома]], нижняя дека
+Файл:Violin Vuillaume.jpg|Скрипке работы [[Вийом, Жан Батист|Жана Батиста Вийома]], верхняя дека
 Файл:Back violins.JPG|Скрипки (хорошо видны обечайки)
 Файл:Soundpost end.jpg|Эф скрипки, через который видна душка
 Файл:Violin tailpiece.jpg|Скрипичный подгрифник
-Файл:Violin made in about 1770.jpg|Скрипка, вид на пуговку
+Файл:Violin made in about 1770.jpg|Скрипке, вид на пуговку
 Файл:Violin bridge blank and finished.jpg|Подставка для струн
 </gallery>
 
